can now take in a slot ID

--- a/pump_config.json
+++ b/pump_config.json
@@ -1,50 +1,1 @@
-{
-	"pump_1": {
-		"name": "Pump 1",
-		"id": 1,
-		"pin": 17,
-		"ingredient": "gin"
-	},
-	"pump_2": {
-		"name": "Pump 2",
-		"id": 2,
-		"pin": 27,
-		"ingredient": "tonic"
-	},
-	"pump_3": {
-		"name": "Pump 3",
-		"id": 3,
-		"pin": 22,
-		"ingredient": "void"
-	},
-	"pump_4": {
-		"name": "Pump 4",
-		"id": 4,
-		"pin": 23,
-		"ingredient": "void"
-	},
-	"pump_5": {
-		"name": "Pump 5",
-		"id": 5,
-		"pin": 24,
-		"ingredient": "void"
-	},
-	"pump_6": {
-		"name": "Pump 6",
-		"id": 6,
-		"pin": 25,
-		"ingredient": "void"
-	},
-	"pump_7": {
-		"name": "Pump 7",
-		"id": 7,
-		"pin": 25,
-		"ingredient": "void"
-	},
-	"pump_8": {
-		"name": "Pump 8",
-		"id": 8,
-		"pin": 25,
-		"ingredient": "void"
-	}
-}
+{"pump_1": {"ingredient": "OJ", "name": "Pump 1", "pin": 17, "id": 1}, "pump_3": {"ingredient": "orange juice", "name": "Pump 3", "pin": 22, "id": 3}, "pump_2": {"ingredient": "tonic", "name": "Pump 2", "pin": 27, "id": 2}, "pump_5": {"ingredient": "void", "name": "Pump 5", "pin": 24, "id": 5}, "pump_4": {"ingredient": "void", "name": "Pump 4", "pin": 23, "id": 4}, "pump_7": {"ingredient": "void", "name": "Pump 7", "pin": 25, "id": 7}, "pump_6": {"ingredient": "void", "name": "Pump 6", "pin": 25, "id": 6}, "pump_8": {"ingredient": "void", "name": "Pump 8", "pin": 25, "id": 8}}
