--- a/pump_config.json
+++ b/pump_config.json
@@ -1,1 +1,50 @@
-{"pump_1": {"ingredient": "OJ", "name": "Pump 1", "pin": 17, "id": 1}, "pump_3": {"ingredient": "orange juice", "name": "Pump 3", "pin": 22, "id": 3}, "pump_2": {"ingredient": "tonic", "name": "Pump 2", "pin": 27, "id": 2}, "pump_5": {"ingredient": "void", "name": "Pump 5", "pin": 24, "id": 5}, "pump_4": {"ingredient": "void", "name": "Pump 4", "pin": 23, "id": 4}, "pump_7": {"ingredient": "void", "name": "Pump 7", "pin": 25, "id": 7}, "pump_6": {"ingredient": "void", "name": "Pump 6", "pin": 25, "id": 6}, "pump_8": {"ingredient": "void", "name": "Pump 8", "pin": 25, "id": 8}}
+{
+    "pump_1": {
+        "ingredient": "OJ",
+        "name": "Pump 1",
+        "pin": 12,
+        "id": 1
+    },
+    "pump_3": {
+        "ingredient": "orange juice",
+        "name": "Pump 3",
+        "pin": 20,
+        "id": 3
+    },
+    "pump_2": {
+        "ingredient": "tonic",
+        "name": "Pump 2",
+        "pin": 16,
+        "id": 2
+    },
+    "pump_5": {
+        "ingredient": "void",
+        "name": "Pump 5",
+        "pin": 22,
+        "id": 5
+    },
+    "pump_4": {
+        "ingredient": "void",
+        "name": "Pump 4",
+        "pin": 21,
+        "id": 4
+    },
+    "pump_7": {
+        "ingredient": "void",
+        "name": "Pump 7",
+        "pin": 9,
+        "id": 7
+    },
+    "pump_6": {
+        "ingredient": "void",
+        "name": "Pump 6",
+        "pin": 10,
+        "id": 6
+    },
+    "pump_8": {
+        "ingredient": "void",
+        "name": "Pump 8",
+        "pin": 25,
+        "id": 8
+    }
+}
